Fixed bug with address bar on mobile chrome and safari blocking menu bar sometimes

--- a/desktop.css
+++ b/desktop.css
@@ -324,6 +324,8 @@ html {
     border-radius: 1.25vh;
     height: 100vh;
     overflow: hidden;
+    position: fixed;
+    height: 100%;
 }
 
 :focus {
